fix Global Navigation layout on small screen

--- a/_layout.scss
+++ b/_layout.scss
@@ -30,7 +30,7 @@
   }
 
   li {
-    padding: 0 ($gap * 0.5) 0 0;
+    padding: 0 ($gap * 0.25);
     display: table-cell;
   }
 
@@ -57,6 +57,7 @@
 
     li {
       padding-right: $gap;
+      padding-left: 0;
     }
   }
 
